--- a/index.html
+++ b/index.html
@@ -451,51 +451,54 @@
         </section>
       </div>
       <div class="subscription-plans-frame">
-        <div class="subscription-plan-header-section">
-          <h2>
-            A <span class="blue-highlight">price perfect</span> for your needs.
-          </h2>
-          <p class="regular-text">
-            From catering for your personal, business, event, socials needs, you
-            can be rest assured we have you in mind in our pricing.
-          </p>
-        </div>
-        <div class="subscription-plan-body-section">
-          <div class="subscription-plan-card">
-            <h3>Basic</h3>
-            <p>Free</p>
-            <p class="plan-summary">Free plan fro all users</p>
-            <p class="regular-paragraph">Unlimited URL shortening</p>
-            <p class="regular-paragraph">Basic Link Analytics</p>
-            <p class="regular-paragraph">Customizable Short Links</p>
-            <p class="regular-paragraph">Standard Support</p>
-            <p class="regular-paragraph">Ad-supported</p>
+        <section class="subscription-plan-container">
+          <div class="subscription-plan-header-section">
+            <h2>
+              A <span class="blue-highlight">price perfect</span> for your
+              needs.
+            </h2>
+            <p class="regular-text">
+              From catering for your personal, business, event, socials needs,
+              you can be rest assured we have you in mind in our pricing.
+            </p>
           </div>
-          <div class="subscription-plan-card">
-            <h3 id="pro-plan-card">Professional</h3>
-            <p>$15/month</p>
-            <p class="plan-summary">Ideal for business creators</p>
-            <p class="regular-paragraph">Enhanced Link Analytics</p>
-            <p class="regular-paragraph">Custom Branded Domains</p>
-            <p class="regular-paragraph">Advanced Link Customization</p>
-            <p class="regular-paragraph">Priority Support</p>
-            <p class="regular-paragraph">Ad-free experience</p>
+          <div class="subscription-plan-body-section">
+            <div class="subscription-plan-card">
+              <h3>Basic</h3>
+              <p>Free</p>
+              <p class="plan-summary">Free plan fro all users</p>
+              <p class="regular-paragraph">Unlimited URL shortening</p>
+              <p class="regular-paragraph">Basic Link Analytics</p>
+              <p class="regular-paragraph">Customizable Short Links</p>
+              <p class="regular-paragraph">Standard Support</p>
+              <p class="regular-paragraph">Ad-supported</p>
+            </div>
+            <div class="subscription-plan-card">
+              <h3 id="pro-plan-card">Professional</h3>
+              <p>$15/month</p>
+              <p class="plan-summary">Ideal for business creators</p>
+              <p class="regular-paragraph">Enhanced Link Analytics</p>
+              <p class="regular-paragraph">Custom Branded Domains</p>
+              <p class="regular-paragraph">Advanced Link Customization</p>
+              <p class="regular-paragraph">Priority Support</p>
+              <p class="regular-paragraph">Ad-free experience</p>
+            </div>
+            <div class="subscription-plan-card">
+              <h3>Teams</h3>
+              <p>$25/month</p>
+              <p class="plan-summary">Share with up to 10 users</p>
+              <p class="regular-paragraph">Team Collaboration</p>
+              <p class="regular-paragraph">User Roles and Permissions</p>
+              <p class="regular-paragraph">Enhanced Security</p>
+              <p class="regular-paragraph">API Access</p>
+              <p class="regular-paragraph">Dedicated Account Manager</p>
+            </div>
+            <div class="subscription-plan-buttons">
+              <button id="custom-price-button">Get Custom Pricing</button>
+              <button id="choice-button">Select Pricing</button>
+            </div>
           </div>
-          <div class="subscription-plan-card">
-            <h3>Teams</h3>
-            <p>$25/month</p>
-            <p class="plan-summary">Share with up to 10 users</p>
-            <p class="regular-paragraph">Team Collaboration</p>
-            <p class="regular-paragraph">User Roles and Permissions</p>
-            <p class="regular-paragraph">Enhanced Security</p>
-            <p class="regular-paragraph">API Access</p>
-            <p class="regular-paragraph">Dedicated Account Manager</p>
-          </div>
-          <div class="subscription-plan-buttons">
-            <button id="custom-price-button">Get Custom Pricing</button>
-            <button id="choice-button">Select Pricing</button>
-          </div>
-        </div>
+        </section>
       </div>
       <div class="shortener-test-frame">
         <div class="shortener-card">
