--- a/index.html
+++ b/index.html
@@ -454,6 +454,33 @@
         <section class="subscription-plan-container">
           <div class="subscription-plan-header-section">
             <h2>
+              <svg
+                width="6"
+                height="48"
+                viewBox="0 0 6 48"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M3 0V48"
+                  stroke="url(#paint0_linear_1_334)"
+                  stroke-width="5"
+                />
+                <defs>
+                  <lineargradient
+                    id="paint0_linear_1_334"
+                    x1="3.05"
+                    y1="0"
+                    x2="3.05"
+                    y2="48"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#112232" />
+                    <stop offset="1" stop-color="#4D6B88" stop-opacity="0" />
+                  </lineargradient>
+                </defs>
+              </svg>
+
               A <span class="blue-highlight">price perfect</span> for your
               needs.
             </h2>
