Subcription frame updated

--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
               <p class="regular-paragraph">Standard Support</p>
               <p class="regular-paragraph">Ad-supported</p>
             </div>
-            <div class="subscription-plan-card">
+            <div class="subscription-plan-card-pro">
               <h3 id="pro-plan-card">Professional</h3>
               <p>$15/month</p>
               <p class="plan-summary">Ideal for business creators</p>
