--- a/index.html
+++ b/index.html
@@ -492,33 +492,39 @@
           <div class="subscription-plan-body-section">
             <div class="subscription-plan-card">
               <h3>Basic</h3>
-              <p>Free</p>
+              <h4>Free</h4>
               <p class="plan-summary">Free plan fro all users</p>
-              <p class="regular-paragraph">Unlimited URL shortening</p>
-              <p class="regular-paragraph">Basic Link Analytics</p>
-              <p class="regular-paragraph">Customizable Short Links</p>
-              <p class="regular-paragraph">Standard Support</p>
-              <p class="regular-paragraph">Ad-supported</p>
+              <ul>
+                <li>Unlimited URL shortening</li>
+                <li>Basic Link Analytics</li>
+                <li>Customizable Short Links</li>
+                <li>Standard Support</li>
+                <li>Ad-supported</li>
+              </ul>
             </div>
             <div class="subscription-plan-card-pro">
               <h3 id="pro-plan-card">Professional</h3>
-              <p>$15/month</p>
+              <h4>$15/month</h4>
               <p class="plan-summary">Ideal for business creators</p>
-              <p class="regular-paragraph">Enhanced Link Analytics</p>
-              <p class="regular-paragraph">Custom Branded Domains</p>
-              <p class="regular-paragraph">Advanced Link Customization</p>
-              <p class="regular-paragraph">Priority Support</p>
-              <p class="regular-paragraph">Ad-free experience</p>
+              <ul>
+                <li>Enhanced Link Analytics</li>
+                <li>Custom Branded Domains</li>
+                <li>Advanced Link Customization</li>
+                <li>Priority Support</li>
+                <li>Ad-free experience</li>
+              </ul>
             </div>
             <div class="subscription-plan-card">
               <h3>Teams</h3>
-              <p>$25/month</p>
+              <h4>$25/month</h4>
               <p class="plan-summary">Share with up to 10 users</p>
-              <p class="regular-paragraph">Team Collaboration</p>
-              <p class="regular-paragraph">User Roles and Permissions</p>
-              <p class="regular-paragraph">Enhanced Security</p>
-              <p class="regular-paragraph">API Access</p>
-              <p class="regular-paragraph">Dedicated Account Manager</p>
+              <ul>
+                <li>Team Collaboration</li>
+                <li>User Roles and Permissions</li>
+                <li>Enhanced Security</li>
+                <li>API Access</li>
+                <li>Dedicated Account Manager</li>
+              </ul>
             </div>
             <div class="subscription-plan-buttons">
               <button id="custom-price-button">Get Custom Pricing</button>
