Subcription section completed

--- a/index.html
+++ b/index.html
@@ -497,6 +497,7 @@
               <ul>
                 <li>
                   <svg
+                    class="check-icon"
                     width="16"
                     height="16"
                     viewBox="0 0 16 16"
@@ -527,7 +528,9 @@
                   </svg>
                   Unlimited URL shortening
                 </li>
-                <li><svg
+                <li>
+                  <svg
+                    class="check-icon"
                     width="16"
                     height="16"
                     viewBox="0 0 16 16"
@@ -554,9 +557,12 @@
                       <clippath class="clip0_1_252">
                         <rect width="16" height="16" fill="white" />
                       </clippath>
-                    </defs>
-                  </svg>Basic Link Analytics</li>
-                <li><svg
+                    </defs></svg
+                  >Basic Link Analytics
+                </li>
+                <li>
+                  <svg
+                    class="check-icon"
                     width="16"
                     height="16"
                     viewBox="0 0 16 16"
@@ -583,9 +589,12 @@
                       <clippath class="clip0_1_252">
                         <rect width="16" height="16" fill="white" />
                       </clippath>
-                    </defs>
-                  </svg>Customizable Short Links</li>
-                <li><svg
+                    </defs></svg
+                  >Customizable Short Links
+                </li>
+                <li>
+                  <svg
+                    class="check-icon"
                     width="16"
                     height="16"
                     viewBox="0 0 16 16"
@@ -612,9 +621,12 @@
                       <clippath class="clip0_1_252">
                         <rect width="16" height="16" fill="white" />
                       </clippath>
-                    </defs>
-                  </svg>Standard Support</li>
-                <li><svg
+                    </defs></svg
+                  >Standard Support
+                </li>
+                <li>
+                  <svg
+                    class="check-icon"
                     width="16"
                     height="16"
                     viewBox="0 0 16 16"
@@ -641,8 +653,9 @@
                       <clippath class="clip0_1_252">
                         <rect width="16" height="16" fill="white" />
                       </clippath>
-                    </defs>
-                  </svg>Ad-supported</li>
+                    </defs></svg
+                  >Ad-supported
+                </li>
               </ul>
             </div>
             <div class="subscription-plan-card-pro">
@@ -650,151 +663,167 @@
               <h3>$15/month</h3>
               <p class="plan-summary">Ideal for business creators</p>
               <ul>
-                <li><svg
+                <li>
+                  <svg
+                    class="check-icon"
                     width="16"
                     height="16"
                     viewBox="0 0 16 16"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
                   >
-                    <g clip-path="url(#clip0_1_252)">
+                    <g clip-path="url(#clip0_1_316)">
                       <path
-                        d="M14.6667 7.38668V8.00001C14.6659 9.43763 14.2003 10.8365 13.3396 11.9879C12.4788 13.1393 11.2689 13.9817 9.89025 14.3893C8.51163 14.7969 7.03818 14.7479 5.68966 14.2497C4.34113 13.7515 3.18978 12.8307 2.40732 11.6247C1.62485 10.4187 1.2532 8.99205 1.34779 7.55755C1.44239 6.12305 1.99815 4.75756 2.9322 3.66473C3.86625 2.57189 5.12853 1.81027 6.5308 1.49344C7.93307 1.17662 9.40019 1.32157 10.7133 1.90668"
-                        stroke="#005AE2"
+                        d="M14.6667 7.38668V8.00001C14.6658 9.43763 14.2003 10.8365 13.3396 11.9879C12.4788 13.1393 11.2689 13.9817 9.89023 14.3893C8.51162 14.7969 7.03817 14.7479 5.68964 14.2497C4.34112 13.7515 3.18976 12.8307 2.4073 11.6247C1.62484 10.4187 1.25319 8.99205 1.34778 7.55755C1.44237 6.12305 1.99813 4.75756 2.93218 3.66473C3.86623 2.57189 5.12852 1.81027 6.53079 1.49344C7.93306 1.17662 9.40017 1.32157 10.7133 1.90668"
+                        stroke="white"
                         stroke-width="2"
                         stroke-linecap="round"
                         stroke-linejoin="round"
                       />
                       <path
                         d="M14.6667 2.66666L8 9.33999L6 7.33999"
-                        stroke="#005AE2"
+                        stroke="white"
                         stroke-width="2"
                         stroke-linecap="round"
                         stroke-linejoin="round"
                       />
                     </g>
                     <defs>
-                      <clippath class="clip0_1_252">
+                      <clippath class="clip0_1_316">
                         <rect width="16" height="16" fill="white" />
                       </clippath>
                     </defs>
-                  </svg>Enhanced Link Analytics</li>
-                <li><svg
+                  </svg>
+                  Enhanced Link Analytics
+                </li>
+                <li>
+                  <svg
+                    class="check-icon"
                     width="16"
                     height="16"
                     viewBox="0 0 16 16"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
                   >
-                    <g clip-path="url(#clip0_1_252)">
+                    <g clip-path="url(#clip0_1_316)">
                       <path
-                        d="M14.6667 7.38668V8.00001C14.6659 9.43763 14.2003 10.8365 13.3396 11.9879C12.4788 13.1393 11.2689 13.9817 9.89025 14.3893C8.51163 14.7969 7.03818 14.7479 5.68966 14.2497C4.34113 13.7515 3.18978 12.8307 2.40732 11.6247C1.62485 10.4187 1.2532 8.99205 1.34779 7.55755C1.44239 6.12305 1.99815 4.75756 2.9322 3.66473C3.86625 2.57189 5.12853 1.81027 6.5308 1.49344C7.93307 1.17662 9.40019 1.32157 10.7133 1.90668"
-                        stroke="#005AE2"
+                        d="M14.6667 7.38668V8.00001C14.6658 9.43763 14.2003 10.8365 13.3396 11.9879C12.4788 13.1393 11.2689 13.9817 9.89023 14.3893C8.51162 14.7969 7.03817 14.7479 5.68964 14.2497C4.34112 13.7515 3.18976 12.8307 2.4073 11.6247C1.62484 10.4187 1.25319 8.99205 1.34778 7.55755C1.44237 6.12305 1.99813 4.75756 2.93218 3.66473C3.86623 2.57189 5.12852 1.81027 6.53079 1.49344C7.93306 1.17662 9.40017 1.32157 10.7133 1.90668"
+                        stroke="white"
                         stroke-width="2"
                         stroke-linecap="round"
                         stroke-linejoin="round"
                       />
                       <path
                         d="M14.6667 2.66666L8 9.33999L6 7.33999"
-                        stroke="#005AE2"
+                        stroke="white"
                         stroke-width="2"
                         stroke-linecap="round"
                         stroke-linejoin="round"
                       />
                     </g>
                     <defs>
-                      <clippath class="clip0_1_252">
+                      <clippath class="clip0_1_316">
                         <rect width="16" height="16" fill="white" />
                       </clippath>
-                    </defs>
-                  </svg>Custom Branded Domains</li>
-                <li><svg
+                    </defs></svg
+                  >Custom Branded Domains
+                </li>
+                <li>
+                  <svg
+                    class="check-icon"
                     width="16"
                     height="16"
                     viewBox="0 0 16 16"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
                   >
-                    <g clip-path="url(#clip0_1_252)">
+                    <g clip-path="url(#clip0_1_316)">
                       <path
-                        d="M14.6667 7.38668V8.00001C14.6659 9.43763 14.2003 10.8365 13.3396 11.9879C12.4788 13.1393 11.2689 13.9817 9.89025 14.3893C8.51163 14.7969 7.03818 14.7479 5.68966 14.2497C4.34113 13.7515 3.18978 12.8307 2.40732 11.6247C1.62485 10.4187 1.2532 8.99205 1.34779 7.55755C1.44239 6.12305 1.99815 4.75756 2.9322 3.66473C3.86625 2.57189 5.12853 1.81027 6.5308 1.49344C7.93307 1.17662 9.40019 1.32157 10.7133 1.90668"
-                        stroke="#005AE2"
+                        d="M14.6667 7.38668V8.00001C14.6658 9.43763 14.2003 10.8365 13.3396 11.9879C12.4788 13.1393 11.2689 13.9817 9.89023 14.3893C8.51162 14.7969 7.03817 14.7479 5.68964 14.2497C4.34112 13.7515 3.18976 12.8307 2.4073 11.6247C1.62484 10.4187 1.25319 8.99205 1.34778 7.55755C1.44237 6.12305 1.99813 4.75756 2.93218 3.66473C3.86623 2.57189 5.12852 1.81027 6.53079 1.49344C7.93306 1.17662 9.40017 1.32157 10.7133 1.90668"
+                        stroke="white"
                         stroke-width="2"
                         stroke-linecap="round"
                         stroke-linejoin="round"
                       />
                       <path
                         d="M14.6667 2.66666L8 9.33999L6 7.33999"
-                        stroke="#005AE2"
+                        stroke="white"
                         stroke-width="2"
                         stroke-linecap="round"
                         stroke-linejoin="round"
                       />
                     </g>
                     <defs>
-                      <clippath class="clip0_1_252">
+                      <clippath class="clip0_1_316">
                         <rect width="16" height="16" fill="white" />
                       </clippath>
-                    </defs>
-                  </svg>Advanced Link Customization</li>
-                <li><svg
+                    </defs></svg
+                  >Advanced Link Customization
+                </li>
+                <li>
+                  <svg
+                    class="check-icon"
                     width="16"
                     height="16"
                     viewBox="0 0 16 16"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
                   >
-                    <g clip-path="url(#clip0_1_252)">
+                    <g clip-path="url(#clip0_1_316)">
                       <path
-                        d="M14.6667 7.38668V8.00001C14.6659 9.43763 14.2003 10.8365 13.3396 11.9879C12.4788 13.1393 11.2689 13.9817 9.89025 14.3893C8.51163 14.7969 7.03818 14.7479 5.68966 14.2497C4.34113 13.7515 3.18978 12.8307 2.40732 11.6247C1.62485 10.4187 1.2532 8.99205 1.34779 7.55755C1.44239 6.12305 1.99815 4.75756 2.9322 3.66473C3.86625 2.57189 5.12853 1.81027 6.5308 1.49344C7.93307 1.17662 9.40019 1.32157 10.7133 1.90668"
-                        stroke="#005AE2"
+                        d="M14.6667 7.38668V8.00001C14.6658 9.43763 14.2003 10.8365 13.3396 11.9879C12.4788 13.1393 11.2689 13.9817 9.89023 14.3893C8.51162 14.7969 7.03817 14.7479 5.68964 14.2497C4.34112 13.7515 3.18976 12.8307 2.4073 11.6247C1.62484 10.4187 1.25319 8.99205 1.34778 7.55755C1.44237 6.12305 1.99813 4.75756 2.93218 3.66473C3.86623 2.57189 5.12852 1.81027 6.53079 1.49344C7.93306 1.17662 9.40017 1.32157 10.7133 1.90668"
+                        stroke="white"
                         stroke-width="2"
                         stroke-linecap="round"
                         stroke-linejoin="round"
                       />
                       <path
                         d="M14.6667 2.66666L8 9.33999L6 7.33999"
-                        stroke="#005AE2"
+                        stroke="white"
                         stroke-width="2"
                         stroke-linecap="round"
                         stroke-linejoin="round"
                       />
                     </g>
                     <defs>
-                      <clippath class="clip0_1_252">
+                      <clippath class="clip0_1_316">
                         <rect width="16" height="16" fill="white" />
                       </clippath>
-                    </defs>
-                  </svg>Priority Support</li>
-                <li><svg
+                    </defs></svg
+                  >Priority Support
+                </li>
+                <li>
+                  <svg
+                    class="check-icon"
                     width="16"
                     height="16"
                     viewBox="0 0 16 16"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
                   >
-                    <g clip-path="url(#clip0_1_252)">
+                    <g clip-path="url(#clip0_1_316)">
                       <path
-                        d="M14.6667 7.38668V8.00001C14.6659 9.43763 14.2003 10.8365 13.3396 11.9879C12.4788 13.1393 11.2689 13.9817 9.89025 14.3893C8.51163 14.7969 7.03818 14.7479 5.68966 14.2497C4.34113 13.7515 3.18978 12.8307 2.40732 11.6247C1.62485 10.4187 1.2532 8.99205 1.34779 7.55755C1.44239 6.12305 1.99815 4.75756 2.9322 3.66473C3.86625 2.57189 5.12853 1.81027 6.5308 1.49344C7.93307 1.17662 9.40019 1.32157 10.7133 1.90668"
-                        stroke="#005AE2"
+                        d="M14.6667 7.38668V8.00001C14.6658 9.43763 14.2003 10.8365 13.3396 11.9879C12.4788 13.1393 11.2689 13.9817 9.89023 14.3893C8.51162 14.7969 7.03817 14.7479 5.68964 14.2497C4.34112 13.7515 3.18976 12.8307 2.4073 11.6247C1.62484 10.4187 1.25319 8.99205 1.34778 7.55755C1.44237 6.12305 1.99813 4.75756 2.93218 3.66473C3.86623 2.57189 5.12852 1.81027 6.53079 1.49344C7.93306 1.17662 9.40017 1.32157 10.7133 1.90668"
+                        stroke="white"
                         stroke-width="2"
                         stroke-linecap="round"
                         stroke-linejoin="round"
                       />
                       <path
                         d="M14.6667 2.66666L8 9.33999L6 7.33999"
-                        stroke="#005AE2"
+                        stroke="white"
                         stroke-width="2"
                         stroke-linecap="round"
                         stroke-linejoin="round"
                       />
                     </g>
                     <defs>
-                      <clippath class="clip0_1_252">
+                      <clippath class="clip0_1_316">
                         <rect width="16" height="16" fill="white" />
                       </clippath>
-                    </defs>
-                  </svg>Ad-free experience</li>
+                    </defs></svg
+                  >Ad-free experience
+                </li>
               </ul>
             </div>
             <div class="subscription-plan-card">
@@ -802,7 +831,9 @@
               <h3>$25/month</h3>
               <p class="plan-summary">Share with up to 10 users</p>
               <ul>
-                <li><svg
+                <li>
+                  <svg
+                    class="check-icon"
                     width="16"
                     height="16"
                     viewBox="0 0 16 16"
@@ -829,9 +860,12 @@
                       <clippath class="clip0_1_252">
                         <rect width="16" height="16" fill="white" />
                       </clippath>
-                    </defs>
-                  </svg>Team Collaboration</li>
-                <li><svg
+                    </defs></svg
+                  >Team Collaboration
+                </li>
+                <li>
+                  <svg
+                    class="check-icon"
                     width="16"
                     height="16"
                     viewBox="0 0 16 16"
@@ -858,9 +892,12 @@
                       <clippath class="clip0_1_252">
                         <rect width="16" height="16" fill="white" />
                       </clippath>
-                    </defs>
-                  </svg>User Roles and Permissions</li>
-                <li><svg
+                    </defs></svg
+                  >User Roles and Permissions
+                </li>
+                <li>
+                  <svg
+                    class="check-icon"
                     width="16"
                     height="16"
                     viewBox="0 0 16 16"
@@ -887,9 +924,12 @@
                       <clippath class="clip0_1_252">
                         <rect width="16" height="16" fill="white" />
                       </clippath>
-                    </defs>
-                  </svg>Enhanced Security</li>
-                <li><svg
+                    </defs></svg
+                  >Enhanced Security
+                </li>
+                <li>
+                  <svg
+                    class="check-icon"
                     width="16"
                     height="16"
                     viewBox="0 0 16 16"
@@ -916,9 +956,12 @@
                       <clippath class="clip0_1_252">
                         <rect width="16" height="16" fill="white" />
                       </clippath>
-                    </defs>
-                  </svg>API Access</li>
-                <li><svg
+                    </defs></svg
+                  >API Access
+                </li>
+                <li>
+                  <svg
+                    class="check-icon"
                     width="16"
                     height="16"
                     viewBox="0 0 16 16"
@@ -945,14 +988,15 @@
                       <clippath class="clip0_1_252">
                         <rect width="16" height="16" fill="white" />
                       </clippath>
-                    </defs>
-                  </svg>Dedicated Account Manager</li>
+                    </defs></svg
+                  >Dedicated Account Manager
+                </li>
               </ul>
             </div>
-            <div class="subscription-plan-buttons">
-              <button id="custom-price-button">Get Custom Pricing</button>
-              <button id="choice-button">Select Pricing</button>
-            </div>
+          </div>
+          <div class="subscription-plan-buttons">
+            <button id="custom-price-button">Get Custom Pricing</button>
+            <button id="choice-button">Select Pricing</button>
           </div>
         </section>
       </div>
