hero frame  modified

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
           </div>
           <div class="header-content">
             <div class="header-account">
-              <a href="#" id="login-link">Log in</a>
-              <button id="signup-link">Try for free</button>
+              <button class="transparent-btn">Log in</button>
+              <button id="signup-btn">Try for free</button>
             </div>
           </div>
         </header>
@@ -91,7 +91,7 @@
           <div class="hero-content">
             <div class="hero-buttons">
               <button id="signup-button">Sign Up</button>
-              <a href="#" id="learn-more-link">Learn More</a>
+              <button class="transparent-btn">Learn More</button>
             </div>
           </div>
           <div class="hero-graphic-section">
