--- a/index.html
+++ b/index.html
@@ -1070,6 +1070,11 @@
 
         <div class="shortener-card">
           <input type="text" placeholder="Paste URL here..." id="url-input" />
+                              <select class="domain-select">
+                        <option value="" disabled selected>Choose Domain</option>
+                        <option value="This Domain">This Domain</option>
+                        <option value="That Domain">That Domain</option>
+                    </select>
           <input type="text" placeholder="Type alias here" id="alias-input" />
           <button id="shorten-button">
             TRIM URL
