hero frame and shortener frame modified

--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
             <input type="text" placeholder="Type alias here" id="alias-input" />
           </div>
           <button id="shorten-button">
-            TRIM URL
+            Trim URL
             <svg
               width="14"
               height="13"
