FAQ Frame updated

--- a/index.html
+++ b/index.html
@@ -1292,7 +1292,7 @@
           <div class="faq-item">
             <div class="faq-question">
               How secure is the URL shortening service? Are the shortened links
-              protected against spam or malicious activity?
+              protected <br> against spam or malicious activity?
               <span class="faq-toggle">+</span>
             </div>
             <div class="faq-answer">
