--- a/index.html
+++ b/index.html
@@ -1244,7 +1244,7 @@
             <div class="faq-question">
               Is it necessary to create an account to use the URL shortening
               service?
-              <span class="faq-toggle">+</span>
+              <span class="faq-toggle"></span>
             </div>
             <div class="faq-answer">
               No, you can shorten URLs without an account, but creating one
@@ -1254,7 +1254,7 @@
           <div class="faq-item">
             <div class="faq-question">
               Are the shortened links permanent? Will they expire?
-              <span class="faq-toggle">+</span>
+              <span class="faq-toggle"></span>
             </div>
             <div class="faq-answer">
               Shortened links do not expire unless deleted by the user or due to
@@ -1264,7 +1264,7 @@
           <div class="faq-item">
             <div class="faq-question">
               Are there any limitations on the number of URLs I can shorten?
-              <span class="faq-toggle">+</span>
+              <span class="faq-toggle"></span>
             </div>
             <div class="faq-answer">
               Free users have generous limits; premium plans offer unlimited
@@ -1274,7 +1274,7 @@
           <div class="faq-item">
             <div class="faq-question">
               Can I customize the shortened URLs to reflect my brand or content?
-              <span class="faq-toggle">+</span>
+              <span class="faq-toggle"></span>
             </div>
             <div class="faq-answer">
               Yes, you can create custom aliases and use branded domains.
@@ -1283,7 +1283,7 @@
           <div class="faq-item">
             <div class="faq-question">
               Can I track the performance of my shortened URLs?
-              <span class="faq-toggle">+</span>
+              <span class="faq-toggle"></span>
             </div>
             <div class="faq-answer">
               Yes, analytics are available for all your links.
@@ -1293,7 +1293,7 @@
             <div class="faq-question">
               How secure is the URL shortening service? Are the shortened links
               protected <br> against spam or malicious activity?
-              <span class="faq-toggle">+</span>
+              <span class="faq-toggle"></span>
             </div>
             <div class="faq-answer">
               We use advanced security checks to protect against spam and
@@ -1303,7 +1303,7 @@
           <div class="faq-item">
             <div class="faq-question">
               What is a QR code and what can it do?
-              <span class="faq-toggle">+</span>
+              <span class="faq-toggle"></span>
             </div>
             <div class="faq-answer">
               A QR code is a scannable code that links to your URL, making
@@ -1314,7 +1314,7 @@
             <div class="faq-question">
               Is there an API available for integrating the URL shortening
               service into my own applications or websites?
-              <span class="faq-toggle">+</span>
+              <span class="faq-toggle"></span>
             </div>
             <div class="faq-answer">
               Yes, we offer a robust API for developers.
