--- a/index.html
+++ b/index.html
@@ -1170,6 +1170,7 @@
         </svg>
       </section>
       <section class="faq-frame">
+        <div class="faq-container">
         <svg
           width="350"
           height="860"
@@ -1388,6 +1389,7 @@
             </lineargradient>
           </defs>
         </svg>
+        </div>
       </section>
       <section class="get-started-frame">
         <svg
