--- a/index.html
+++ b/index.html
@@ -1457,9 +1457,12 @@
             </lineargradient>
           </defs>
         </svg>
+        <div class="get-started-banner">
 
+        
         <h2>Revolutionizing Link Optimization</h2>
         <button id="get-started-button">Get Started</button>
+        </div>
         <svg
           width="579"
           height="299"
