--- a/index.html
+++ b/index.html
@@ -1293,7 +1293,8 @@
           <div class="faq-item">
             <div class="faq-question">
               How secure is the URL shortening service? Are the shortened links
-              protected <br> against spam or malicious activity?
+              protected <br />
+              against spam or malicious activity?
               <span class="faq-toggle">+</span>
             </div>
             <div class="faq-answer">
@@ -1458,10 +1459,8 @@
           </defs>
         </svg>
         <div class="get-started-banner">
-
-        
-        <h2>Revolutionizing Link Optimization</h2>
-        <button id="get-started-button">Get Started</button>
+          <h2>Revolutionizing Link Optimization</h2>
+          <button id="get-started-button">Get Started</button>
         </div>
         <svg
           width="579"
