--- a/index.html
+++ b/index.html
@@ -1458,7 +1458,7 @@
             </lineargradient>
           </defs>
         </svg>
-        <div class="get-started-banner">
+        <div class="get-started-card">
           <h2>Revolutionizing Link Optimization</h2>
           <button id="get-started-button">Get Started</button>
         </div>
