footer grid achieved

--- a/index.html
+++ b/index.html
@@ -1694,8 +1694,8 @@
                   </div>
                 </div>
               </div>
-              <div class="footer-text">
-                <div class="footer-text-item">
+              <div class="footer-grid">
+                <div class="footer-grid-links">
                   <h3 class="footer-text-item-title">Why Scissor ?</h3>
                   <p class="footer-text-item-description">Scissors 101</p>
                   <p class="footer-text-item-description">Integrations & API</p>
